# sloc-rs

./: Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/commands/: mod.rs
src/scanner/: mod.rs
src/test/: collect.rs  mod.rs  scanner.rs  sloc.rs
src/types/: mod.rs
src/utils/: ignore.rs  mod.rs  support.rs  worker.rs
src/walker/: collect.rs
