[package]
name = "sloc-rs"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "CLI tool to count source lines of code (SLOC) in a project."
license = "MIT"
categories = ["command-line-utilities", "development-tools", "code-analysis"]
repository = "https://github.com/Emii-lia/sloc-rs"
keywords = ["sloc", "code", "cli", "rust", "counter"]

[[bin]]
name = "sloc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }